--- a/TimeAss4Video/TimeAss4Video.csproj
+++ b/TimeAss4Video/TimeAss4Video.csproj
@@ -6,7 +6,7 @@
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon></ApplicationIcon>
-    <RootNamespace>TimeSrt2Video</RootNamespace>
+    <RootNamespace>TimeAss4Video</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
